--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
 }
 
 body {
-  @apply bg-slate-100 dark:bg-neutral-900 m-0  text-neutral-950
+  @apply bg-slate-100 dark:text-white dark:bg-neutral-900 m-0  text-neutral-950
 }
 
 h2 {
